updated xml doc for swagger
